--- a/templates/base.html
+++ b/templates/base.html
@@ -2,17 +2,17 @@ $def with (page)
 
 <html>
 <head>
-    <title>Mi tienda</title>
+    <title>Everardo</title>
     <style>
         
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 <link href="static/css/bootstrap.min.css" rel="stylesheet" media="screen"> 
 <div class="navbar navbar-inverse"> 
-    <a class="navbar-brand" href="#">@Mercado en linea</a> 
+    <a class="navbar-brand" href="#"></a> 
     <ul class="nav navbar-nav"> 
-        <li class="active"><a href="/">Inicio</a></li> 
-        <li><a href="/new">Agregar nuevo producto</a></li>
+        <li class="active"><a href="/">Home</a></li> 
+        <li><a href="/new">Agregar producto</a></li>
 
 
     </ul> 
